fixed bio spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1518,8 +1518,9 @@ nav.navbar ul li:hover > ul {
   transform: scaleY(1);
   visibility: visible;
 }
+/* transition color after */
 nav.navbar.stick {
-  background: #fff none repeat scroll 0 0;
+  background: #edf5f2 none repeat scroll 0 0;
   border-bottom: 1px solid rgba(25, 25, 25, 0.04) !important;
   border-left-color: #f5f55f;
   border-right-color: #f5f55f;
